--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -13,11 +13,11 @@
     width: 100%;
     height: 100%;
     color: #ffffff;
-
-    a { 
+    
+    a, .glowText { 
         margin-left: 20px;
         transition: .3s;
-
+    
         &:hover {
             cursor: pointer;
             transform: translate(0, -1px);
@@ -35,3 +35,4 @@
         }
     }
 }
+
